# riskproof

./: .dockerignore  .gitignore  .mcp.example.json  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  README.zh-CN.md  SECURITY.md  docker-compose.sidecar.yml  docker-compose.yml  package-lock.json  package.json  riskproof.example.json  riskproof.schema.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
agent/: .env.example  README.md  agent.py  demo.py  mcp_client.py  poisoned_mock_server.py  pyproject.toml  requirements.txt  run.sh
agent/src/riskproof_agent/: __init__.py  agent.py  callback.py  mcp_client.py
agent/tests/: test_agent.py  test_callback.py  test_mcp_client.py
agent/tests/fixtures/: fake_mcp_server.py
docs/: IDEA.md  docker.md  publish-checklist.md
scripts/: benchmark.mjs  check-versions.mjs
test-workspace/: .mcp.json  README.md
test-workspace/mock-server/: business-tools-server.ts
test-workspace/scripts/: quick-smoke.sh  run-all-tests.sh  run-all-tests.ts  test-via-proxy.sh  test-via-proxy.ts
test-workspace/test-cases/scenarios/: 01-safe-read.json  02-curl-bash.json  03-rm-rf.json  04-chmod-777.json  05-eval-inject.json  06-nc-listen.json  07-secret-email.json  08-secret-http.json  09-password-http.json  10-untrusted-web-shell.json  11-untrusted-email-shell.json  12-customer-data-email.json  13-untrusted-email-to.json  14-capability-mismatch.json  15-capability-expired.json  16-forbidden-taint.json  17-recipient-domain.json  18-no-capability.json  19-provenance-not-allowed.json  20-invariant-forbidden-tool.json  21-invariant-protected-taint.json  22-invariant-numeric.json  23-mkfifo.json  24-redirect-dev.json  25-clinical-sae.json  26-wget-pipe-sh.json  27-safe-http-internal.json  28-safe-email-internal.json
